--- a/dev/css/login_v2.css
+++ b/dev/css/login_v2.css
@@ -18,7 +18,7 @@
 
 header {
   background-color: #153A64;
-  height: 100px;
+  height: 70px;
 }
 
 main {
@@ -240,6 +240,7 @@ main {
   display: flex;
   flex-direction: column;
   width: 300px;
+  padding: 20px;
 }
 
 .mobile .mobile_logo {
@@ -254,5 +255,35 @@ main {
 .mobile form {
   display: flex;
   flex-direction: column;
+  align-items: center;
+}
+
+.mobile form h3 {
+  margin-bottom: 15px;
+}
+
+.mobile form p {
+  margin: 5px;
+  font-size: 12px;
+}
+
+.mobile form p.forApply {
+  display: none;
+}
+
+.mobile form input.forApply {
+  display: none;
+}
+
+.mobile form input#mobileLogin_submit {
+  margin: 15px;
+}
+
+.mobile form a {
+  font-size: 12px;
+}
+
+.mobile form a.clickMe_log {
+  display: none;
 }
 /*# sourceMappingURL=login_v2.css.map */
